classDiagram
    %% Patron-related domains
    direction LR

    class ORDER {
        Order ID
        Scheduled At
        Table Number
        Status
        Priority
        Created At
        Updated At
        Special Requests
        Patron ID
        -----------------------
        Create
        List All
        View
        Modify
        Cancel
    }

    class DISH {
        Dish ID
        Name
        Description
        Price
        Image Name
        Station
        Category
        Preparation Time
        -----------------------
        Create
        List All
        View
        Modify
        Delete
    }
    PATRON -- ORDER : Places
    ORDER -- DISH : Contains
